// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header component > Header snapshot with empty search query 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="_header_503ab9"
      >
        <div
          class="_searchContainer_503ab9"
        >
          <form
            class="_inputContainer_503ab9"
          >
            <input
              class="_input_503ab9"
              data-testid="search-input"
              placeholder="Search for the Star Trek episode"
              value=""
            />
          </form>
          <button
            class="_btnSearch_503ab9"
            data-testid="search-btn"
          >
            Search
          </button>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="_header_503ab9"
    >
      <div
        class="_searchContainer_503ab9"
      >
        <form
          class="_inputContainer_503ab9"
        >
          <input
            class="_input_503ab9"
            data-testid="search-input"
            placeholder="Search for the Star Trek episode"
            value=""
          />
        </form>
        <button
          class="_btnSearch_503ab9"
          data-testid="search-btn"
        >
          Search
        </button>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header component > Header snapshot with provided search query 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="_header_503ab9"
      >
        <div
          class="_searchContainer_503ab9"
        >
          <form
            class="_inputContainer_503ab9"
          >
            <input
              class="_input_503ab9"
              data-testid="search-input"
              placeholder="Search for the Star Trek episode"
              value="test"
            />
            <button
              class="_btnReset_503ab9"
              data-testid="reset-btn"
              type="reset"
            >
              x
            </button>
          </form>
          <button
            class="_btnSearch_503ab9"
            data-testid="search-btn"
          >
            Search
          </button>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="_header_503ab9"
    >
      <div
        class="_searchContainer_503ab9"
      >
        <form
          class="_inputContainer_503ab9"
        >
          <input
            class="_input_503ab9"
            data-testid="search-input"
            placeholder="Search for the Star Trek episode"
            value="test"
          />
          <button
            class="_btnReset_503ab9"
            data-testid="reset-btn"
            type="reset"
          >
            x
          </button>
        </form>
        <button
          class="_btnSearch_503ab9"
          data-testid="search-btn"
        >
          Search
        </button>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header component > Header snapshot with status === "submitting" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="_header_503ab9"
      >
        <div
          class="_searchContainer_503ab9"
        >
          <form
            class="_inputContainer_503ab9"
          >
            <input
              class="_input_503ab9"
              data-testid="search-input"
              placeholder="Search for the Star Trek episode"
              value=""
            />
          </form>
          <button
            class="_btnSearch_503ab9"
            data-testid="search-btn"
          >
            Search
          </button>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="_header_503ab9"
    >
      <div
        class="_searchContainer_503ab9"
      >
        <form
          class="_inputContainer_503ab9"
        >
          <input
            class="_input_503ab9"
            data-testid="search-input"
            placeholder="Search for the Star Trek episode"
            value=""
          />
        </form>
        <button
          class="_btnSearch_503ab9"
          data-testid="search-btn"
        >
          Search
        </button>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
